[gd_scene load_steps=12 format=2]

[ext_resource path="res://scripts/playerScripts/playerPlatform.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/playerPlatforms/SpriteSheetBubblesPolishedNew.png" type="Texture" id=2]
[ext_resource path="res://assets/sounds/sfx/playerSfx/platformDisappear2.wav" type="AudioStream" id=3]
[ext_resource path="res://scripts/sfxScripts/sfxSelfDestroyScript.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 27, 19 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "countdown"
length = 3.0
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 1.25, 1.5, 1.75, 2, 2.25, 2.4, 2.6, 2.8, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.729412 ), Color( 1, 1, 1, 0.458824 ), Color( 1, 1, 1, 0.729412 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.458824 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.458824 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 2.66, 2.76, 2.86, 2.96 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26, 27, 27, 26, 25, 24 ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 31.5, 22.5 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 10, 10.5 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 8.5, 10.5 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 57.5, 11 )

[node name="playerPlatform1" type="StaticBody2D" groups=["playerPlatforms"]]
collision_layer = 8
collision_mask = 0
script = ExtResource( 1 )

[node name="platformDeathSfx" type="AudioStreamPlayer" parent="." groups=["playerPlatformDeathSfxs"]]
stream = ExtResource( 3 )
volume_db = -15.0
bus = "sfx"
script = ExtResource( 4 )

[node name="selfDestroyTimer" type="Timer" parent="platformDeathSfx"]
wait_time = 3.0

[node name="sprite" type="Sprite" parent="."]
position = Vector2( 2, 1 )
texture = ExtResource( 2 )
hframes = 6
vframes = 12
frame = 27

[node name="collisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 9.53674e-07 )
shape = SubResource( 1 )

[node name="selfDestroyTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="animationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/countdown = SubResource( 3 )

[node name="trapDetectArea2D" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 0

[node name="collisionShape2D" type="CollisionShape2D" parent="trapDetectArea2D"]
position = Vector2( 1, 0 )
shape = SubResource( 4 )

[node name="playerDetectArea2DRx" type="Area2D" parent="."]
position = Vector2( 1, -1 )

[node name="collisionShape2D" type="CollisionShape2D" parent="playerDetectArea2DRx"]
position = Vector2( 21, -28.5 )
shape = SubResource( 5 )

[node name="playerDetectArea2DLx" type="Area2D" parent="."]
position = Vector2( -31, -1 )

[node name="collisionShape2D" type="CollisionShape2D" parent="playerDetectArea2DLx"]
position = Vector2( 8.5, -28.5 )
shape = SubResource( 6 )

[node name="playerExitDetectArea2D" type="Area2D" parent="."]

[node name="collisionShape2D" type="CollisionShape2D" parent="playerExitDetectArea2D"]
position = Vector2( 1.5, -30 )
shape = SubResource( 7 )

[connection signal="timeout" from="platformDeathSfx/selfDestroyTimer" to="platformDeathSfx" method="_on_selfDestroyTimer_timeout"]
[connection signal="timeout" from="selfDestroyTimer" to="." method="_on_SelfDestroyTimer_timeout"]
[connection signal="body_entered" from="trapDetectArea2D" to="." method="_on_trapDetectArea2D_body_entered"]
[connection signal="body_entered" from="playerDetectArea2DRx" to="." method="_on_playerDetectArea2DRx_body_entered"]
[connection signal="body_entered" from="playerDetectArea2DLx" to="." method="_on_playerDetectArea2DLx_body_entered"]
[connection signal="body_exited" from="playerExitDetectArea2D" to="." method="_on_playerExitDetectArea2D_body_exited"]
